<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pluxNumTxtViw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="368dp"
        android:text="+2"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantNameTxtViw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurantNameTxtViw" />

    <TextView
        android:id="@+id/pluxNumTxtViw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="368dp"
        android:text="+2"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantNameTxtViw2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurantNameTxtViw2" />

    <TextView
        android:id="@+id/pluxNumTxtViw6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="368dp"
        android:text="-5"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantNameTxtViw3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurantNameTxtViw3" />

    <TextView
        android:id="@+id/pluxNumTxtViw7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="368dp"
        android:text="+2"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantNameTxtViw4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurantNameTxtViw4" />

    <TextView
        android:id="@+id/restaurantNameTxtViw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/rest_name2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantNameTxtViw" />

    <TextView
        android:id="@+id/restaurantNameTxtViw2"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/rest_name3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantNameTxtViw" />

    <TextView
        android:id="@+id/restaurantNameTxtViw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/rest_name4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantNameTxtViw2" />

    <TextView
        android:id="@+id/restaurantNameTxtViw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/rest_name5"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantNameTxtViw3" />

    <TextView
        android:id="@+id/creditNumTxtViw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="27"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/creditTitleTxtViw"
        app:layout_constraintStart_toEndOf="@+id/creditTitleTxtViw"
        app:layout_constraintTop_toTopOf="@+id/creditTitleTxtViw" />

    <TextView
        android:id="@+id/creditTitleTxtViw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text="Your Credit:"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/historyTitleTxtViw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="Recent History"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditTitleTxtViw" />

    <TextView
        android:id="@+id/RestaurantNameTxtViw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="18dp"
        android:text="@string/rest_name1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyTitleTxtViw" />

    <TextView
        android:id="@+id/pluxNumTxtViw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="368dp"
        android:text="+2"
        app:layout_constraintBottom_toBottomOf="@+id/RestaurantNameTxtViw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RestaurantNameTxtViw"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/redeemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Redeem?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>